[gd_scene load_steps=8 format=2]

[ext_resource path="res://sound/screamer.tscn" type="PackedScene" id=1]
[ext_resource path="res://planet/Planet.gd" type="Script" id=2]
[ext_resource path="res://tools/direction_arrow.tscn" type="PackedScene" id=3]
[ext_resource path="res://graphics/planet_moonlike.png" type="Texture" id=4]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.1
rough = true
bounce = 50.0
absorbent = true

[sub_resource type="CircleShape2D" id=2]
radius = 13798.3

[sub_resource type="CircleShape2D" id=3]
radius = 43.7347

[node name="Planet" type="RigidBody2D" groups=[
"hitables",
"planet",
"walkables",
]]
mass = 10.0
physics_material_override = SubResource( 1 )
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="GravityArea" type="Area2D" parent="."]

[node name="GravityDistance" type="CollisionShape2D" parent="GravityArea"]
visible = false
shape = SubResource( 2 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.110058, 0.110058 )
texture = ExtResource( 4 )

[node name="ImpulseArrow" parent="." instance=ExtResource( 3 )]
visible = false
width = 5.0
default_color = Color( 1, 0, 0, 1 )

[node name="screamer" parent="." instance=ExtResource( 1 )]
[connection signal="body_entered" from="." to="." method="_on_Planet_body_entered"]
[connection signal="body_entered" from="." to="screamer" method="scream"]
[connection signal="body_entered" from="GravityArea" to="." method="_on_GravityArea_body_entered"]
[connection signal="body_exited" from="GravityArea" to="." method="_on_GravityArea_body_exited"]
